# core

./: .gitignore  CMakeLists.txt  README.md
src/: core.c  core.h  driver.c  driver_web.c
src/core/: core.c  core.h
src/core/gll/: gll.h
src/core/window/: window_em.c  window_win32.c
src/env/: env.c  env.h  env_win32.c  env_x11.c  env_x11.h
src/event/: event.c  event.h  event_win32.c  event_x11.c
src/gll/: gll_x11.c
src/input/: input.h  input_win32.c  input_x11.c
src/thread/: thread.h  thread_unix.c  thread_win32.c
src/window/: window.c  window.h  window_win32.c  window_x11.c
